Rewrite `app.js`, add workaround fix to address viewport height issue on mobile browsers

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -605,13 +605,6 @@ video {
   position: sticky;
 }
 
-.inset-0 {
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
-}
-
 .top-0 {
   top: 0px;
 }
@@ -693,10 +686,7 @@ video {
 
 .min-h-screen {
   min-height: 100vh;
-}
-
-.min-h-full {
-  min-height: 100%;
+  min-height: calc(var(--vh, 1vh) * 100);
 }
 
 .w-full {
@@ -709,10 +699,6 @@ video {
 
 .w-60 {
   width: 15rem;
-}
-
-.min-w-full {
-  min-width: 100%;
 }
 
 .max-w-screen-md {
